--- a/templates/about.html
+++ b/templates/about.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
-	<h1>MY FIRST WEB-APP EVER!!</h1>
+	<h1>HELLO WORLD!!</h1>
 <form id = "department" method="GET" action="/">
 	<input type = 'submit'>
 </form>
